--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="brand">Acme Web Design</h1>
+      <h1 class="brand"><span>Acme</span> Web Design</h1>
       <div class="wrapper">
         <div class="company-info">
           <h3>Acme Web Design</h3>
@@ -37,11 +37,11 @@
               <label>Phone Number</label>
               <input type="text" name="phone" />
             </p>
-            <p>
+            <p class="full">
               <label>Message</label>
               <textarea name="message" rows="5"></textarea>
             </p>
-            <p>
+            <p class="full">
               <button>Submit</button>
             </p>
           </form>
