--- a/index.html
+++ b/index.html
@@ -10,12 +10,18 @@
       integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.0/animate.css"
+      integrity="sha512-VFXHmyaAM2CkNU+TogLhWl7rjTFcXo1YRsruJHHmsZasKSn6LlFivRJ6gVG4mlJtybmAkZL3z9sxqGo5aX0fIw=="
+      crossorigin="anonymous"
+    />
     <title>Acme Web Design</title>
   </head>
   <body>
     <div class="container">
       <h1 class="brand"><span>Acme</span> Web Design</h1>
-      <div class="wrapper">
+      <div class="wrapper animated_bounceInLeft">
         <div class="company-info">
           <h3>Acme Web Design</h3>
           <ul>
